# theme_boost_union_test_envs

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  boost-union-envs  config.yml  env.local-nginx-test.yml  env.local.yml  env.prod.yml  mkdocs.yml  moodle-versions-to-supported-php-versions.yaml  pyproject.toml  supported-plugins.yml  tox.ini
docs/: api.md  installation.md  usage.md
docs/images/state-diagram/: boost-union-envs-state-diagram.drawio
tests/: __init__.py  test_app.py
theme_boost_union_test_envs/: __init__.py  app.py  cli.py  core.py  di_containers.py
theme_boost_union_test_envs/adapters/: __init__.py  git_adapter.py
theme_boost_union_test_envs/cross_cutting/: __init__.py  configuration.py  infrastructure_parser.py  logger.py  template_engine.py
theme_boost_union_test_envs/cross_cutting/templates/: .env  index.html.j2  local.yml  moodle_nginx.conf  plesk_production_nginx.conf
theme_boost_union_test_envs/domain/: __init__.py  git.py  moodle.py  moodle_repository.py  test_container.py  test_infrastructure.py  testbed.py
theme_boost_union_test_envs/entities/: __init__.py  git.py  plugins.py
theme_boost_union_test_envs/exceptions/: __init__.py  exceptions.py
theme_boost_union_test_envs/services/: __init__.py  container_service.py  infrastructure_service.py
theme_boost_union_test_envs/ui/: __init__.py
theme_boost_union_test_envs/ui/cli/: __init__.py  cli.py
theme_boost_union_test_envs/ui/cli/components/: __init__.py
theme_boost_union_test_envs/ui/gui/: gui.py
theme_boost_union_test_envs/utils/: __init__.py  config.py  dataclasses.py  progressbar.py
